[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "smart-home-testbed"
version = "0.1.0"
description = "Various smart home devices' APIs"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["iot", "smart home", "api"]
authors = [
  {name = "François De Keersmaeker", email = "francois.dekeersmaeker@uclouvain.be" }
]
maintainers = [
  {name = "François De Keersmaeker", email = "francois.dekeersmaeker@uclouvain.be" }
]

# Classifiers help users find your project by categorizing it.
#
# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Pick your license as you wish
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "requires-python" key in this file.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",

  "Operating System :: OS Independent"
]

dependencies = [
  "pure-python-adb",  # adb client
  "asyncio",          # asynchronous functions
  "opencv-python",
  "scikit-image",
  "python-kasa",      # TP-Link Kasa plug (HS110)
  "tapo",             # Tapo plug (P110) & light (L530E)
  "pytapo",           # Tapo camera (C200)
  "aiohue",           # Philips Hue bridge
  "python-miio",      # Xiaomi Mi Home camera (chuangmi.camera.ipc019)
  "pysmartthings"     # SmartThings API (cloud)
]

[project.urls]
"Homepage" = "https://forge.uclouvain.be/smart-home-network-security/signature-extraction"
"Source" = "https://forge.uclouvain.be/smart-home-network-security/signature-extraction"
