[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "smart-home-testbed"
version = "0.1.0"
description = "Various smart home devices' APIs"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["iot", "smart home", "api"]
authors = [
  {name = "François De Keersmaeker", email = "francois.dekeersmaeker@uclouvain.be" }
]
maintainers = [
  {name = "François De Keersmaeker", email = "francois.dekeersmaeker@uclouvain.be" }
]

# Classifiers help users find your project by categorizing it.
#
# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Pick your license as you wish
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "requires-python" key in this file.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",

  "Operating System :: OS Independent"
]

dependencies = [
  "pure-python-adb==0.3.0.dev0",  # adb client
  "asyncio==3.4.3",               # asynchronous functions
  "opencv-python==4.12.0.88",
  "scikit-image==0.52.2",
  "python-kasa==0.10.2",          # TP-Link Kasa plug (HS110)
  "tapo==0.8.3",                  # Tapo plug (P110) & light (L530E)
  "pytapo==3.3.49",               # Tapo camera (C200)
  "aiohue==4.7.4",                # Philips Hue bridge
  "python-miio==0.5.12",          # Xiaomi Mi Home camera (chuangmi.camera.ipc019)
  "pysmartthings==3.2.8"          # SmartThings API (cloud)
]

[project.urls]
"Homepage" = "https://forge.uclouvain.be/smart-home-network-security/smart-home-testbed"
"Source" = "https://forge.uclouvain.be/smart-home-network-security/smart-home-testbed"
